# HealthGPT

./: pyproject.toml
app/models/: splitter.py
app/preprocessing/: dataExploration.ipynb
data/: health.xlsm
